--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,14 +30,14 @@
 :root {
   --color-topic: #252525;
   --color-para: #5f5f5f;
-  --color-main: #060010;
+  --color-main: #FFFCF4;
   --color-red: #b91533;
 }
 
 .dark {
   --color-topic: #ffffff;
   --color-para: #a0a0a0;
-  --color-main: #060010;
+  --color-main: #FFFCF4;
   --color-red: #d6262c;
 }
 
